<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mdism.unitech.MainActivity">

    <TextView
    android:text="TextView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:gravity="center"
    android:id="@+id/connection"
    android:textColor="@android:color/holo_red_light"
    android:textSize="18sp" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/textView2"
        android:textSize="30sp"
        android:layout_below="@+id/connection"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:text="@string/number1"
        android:layout_marginEnd="58dp"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/number2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_alignStart="@+id/button1"
        android:layout_marginTop="33dp"
        android:id="@+id/button3" />

    <Button
        android:text="@string/number4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:layout_marginTop="33dp"
        android:id="@+id/button5" />

    <Button
        android:text="@string/number5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button5"
        android:layout_alignStart="@+id/button4"
        android:id="@+id/button6" />

    <Button
        android:text="@string/number7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button7"
        android:layout_alignStart="@+id/button6"
        android:id="@+id/button8" />

    <Button
        android:text="@string/number3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button4"
        android:layout_alignBaseline="@+id/button3"
        android:layout_alignBottom="@+id/button3"
        android:layout_alignStart="@+id/button2" />

    <Button
        android:text="@string/number6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:id="@+id/button7"
        android:layout_below="@+id/button5"
        android:layout_alignStart="@+id/button5" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button1"
        android:text= "@string/number0"
        android:layout_marginStart="57dp"
        android:layout_marginTop="58dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true" />

</RelativeLayout>
